tests/macros/plugin/page_size.stderr
error: option `page_size` does not exist for kind `plugin`
 --> $DIR/page_size.rs:2:38
  |
2 |     inquisition::questions![plugin { page_size: todo!() }];
  |                                      ^^^^^^^^^
