tests/macros/plugin/page_size.rs
fn main() {
    inquisition::questions![plugin { page_size: todo!() }];
}
